2009-02-10  Nick Garnett  <nickg@ecoscentric.com>

	* src/spi_stm32.c (bus3_setup): Fix typo.

2009-02-05  Nick Garnett  <nickg@ecoscentric.com>

	* include/spi_stm32.h: Add macro to define an STM32 SPI device.

	* src/spi_stm32.c: Fix potential compile error.

	* src/spi_stm32_init.cxx: Change constructor init priority to use
	CYG_INIT_BUS_SPI.

2009-01-30  Nick Garnett  <nickg@ecoscentric.com>

	* cdl/spi_stm32.cdl: 
	* include/spi_stm32.h: 
	* src/spi_stm32.c: 
	* src/spi_stm32_init.cxx:
	New package, STM32 SPI driver contributed by Chris Holgate.

//===========================================================================
// ####GPLCOPYRIGHTBEGIN####                                                
// -------------------------------------------                              
// This file is part of eCos, the Embedded Configurable Operating System.   
// Copyright (C) 2008, 2009 Free Software Foundation, Inc.
//
// This program is free software; you can redistribute it and/or modify     
// it under the terms of the GNU General Public License as published by     
// the Free Software Foundation; either version 2 or (at your option) any   
// later version.                                                           
//
// This program is distributed in the hope that it will be useful, but      
// WITHOUT ANY WARRANTY; without even the implied warranty of               
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU        
// General Public License for more details.                                 
//
// You should have received a copy of the GNU General Public License        
// along with this program; if not, write to the                            
// Free Software Foundation, Inc., 51 Franklin Street,                      
// Fifth Floor, Boston, MA  02110-1301, USA.                                
// -------------------------------------------                              